# jellyfish

./: .gitignore  Android.mk  Makefile.in  README  README.md  SConstruct  app-android.c  app.h  audio.h  audiotest.scm  configure  configure.ac  dist.sh  main.cpp  weavingcodes.scm
assets/: boot.scm  compiler.scm  examples.scm  fluxa.scm  fluxus.scm  jellyfish.scm  json.scm  lib.scm  spider.scm  starwisp.scm  test.scm
assets/shaders/: blinn.vert.glsl
core/: db.cpp  db.h  fixed.cpp  fixed.h  idmap.cpp  list.cpp  list.h  mat44.h  vec3.h
debian/: README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  jellyfish.cron.d.ex  jellyfish.default.ex  jellyfish.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
engine/: cube.h  engine.cpp  importgl.c  importgl.h  jellyfish.cpp  jellyfish.h  jellyfish_primitive.cpp  jellyfish_primitive.h  nomadic.cpp  primitive.cpp  primitive.h  ps2-renderer.cpp  scenenode.cpp  scenenode.h  text_primitive.h  texture.cpp  texture.h
engine/ee/: ps2-nomadic.cpp  ps2-renderer.cpp
examples/: audiotest.scm  cube-matrix.scm  fast.scm  fps.scm  gp.scm  weavingcodes.scm
experiments/: audiotest.scm  audiotest2.scm  audiotest3.scm  fast.scm  fft-compare.py  fluxa-remote.py  fps.scm  geom.scm  lz.scm  math-hack.scm  osc.py  random-synth.scm  remote.py  sb.scm  seq.scm  shader-test.scm  simple.scm  spikey.scm  tablet.scm  tesst.scm  timed.scm  timed.scm~  toothpaste.scm  unit-test.jelly  unit-test.scm  weavingcodes.scm
experiments/flz/: debug.py  debug.py~  debug.txt  debug.txt~  driver.py  flz.py  lz.scm  sync.py  sync.py~  testdriver.py  timetest.scm
fluxa/: Allocator.cpp  Graph.cpp  Graph.h  Modules.cpp  Sample.cpp  Sample.h
jellyfish/: .sconsign.dblite  SConstruct  instructions.h  jellyfish.cpp  jellyfish_primitive.cpp  main.cpp
qt/: EditorDialog.cpp  EditorDialog.h  GLGraphicsScene.cpp  GLGraphicsScene.h  MainWindow.cpp  MainWindow.h  Makefile  SyntaxHighlight.cpp  SyntaxHighlight.h  brick_atom_slider_widget.cpp  brick_atom_slider_widget.h  brick_atom_widget.cpp  brick_atom_widget.h  brick_list_widget.cpp  brick_list_widget.h  brick_widget.cpp  brick_widget.h  canvas_widget.cpp  canvas_widget.h  drag_widget.cpp  drag_widget.h  fluxus  fluxus.pro  jf.pro  main.cpp  moc_EditorDialog.cpp  moc_SyntaxHighlight.cpp  sexpr.cpp  sexpr.h
scheme/: Makefile  opdefines.h  scheme.cpp
src/: ac_config.h.in  audio.cpp  audio.h  config.h.in  graphics.cpp  graphics.h  interpreter.cpp  interpreter.h  main.cpp  main.dep
src/audio/: PortAudioClient.cpp  PortAudioClient.h  alsa.c  alsa.cpp  alsa.cpp~  alsa.c~  alsa.h  alsa.h~  portaudio_client.cpp  portaudio_client.h
src/core/: db.dep  db_container.cpp  db_container.dep  db_container.h  fixed.dep  fixed.h  geometry.cpp  geometry.dep  geometry.h  idmap.dep  idmap.h  list.dep  mat44.h  msg.h  noise.cpp  noise.dep  noise.h  osc.cpp  osc.h  pdata.h  pixels.h  (+4 more)
tests/: osctest.py
(+93 files in other folders)
